deployments/docker-registry/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker
spec:
  selector:
    app: docker-registry
  ports:
    - name: web
      protocol: TCP
      port: 5000
      targetPort: web
